--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 }
 .mini_Box{
     display: flex;
- flex-direction: column;
+    flex-direction: column;
     padding: 30px 50px;
     border-radius: 10px;
     text-align: center;
@@ -31,14 +31,25 @@ body{
 }
 
 .primary {
-    background-color:palevioletred Grayish rgb(168, 68, 79);
+    font-family: "Manrope", sans-serif;
     font-size: 10px;
-   color: #52ffa8;
-}
-.secondry{
-    background-color:Dark Grayish rgb(27, 27, 29);
+    color: var(--Neon-Green);
+    text-transform: uppercase;
+    word-spacing: 10px;
 }
 
+.Advice-text{
+    margin: 20px auto 0; 
+    font-size: 28px;
+    width: 100%;
+    color: var(--Light-Cyan);
+}
+
+.separation_line{
+    margin: 20px 0 30px;
+    background-size: 100% 100%;
+    width: 100%;
+}
 
 button{
     border: none;
@@ -46,7 +57,17 @@ button{
     appearance: none;
     background-color: inherit;
 }
-img{
-    height: 20px;
-    width: 20px;
+
+#dice{
+    background-color: var(--Neon-Green);
+    border-radius: 50%;
+    padding: 15px 16px 12px;
+    border: 0;
+    cursor: pointer;
+    margin: 10px auto -50px;
 }
+
+#dice img {
+    width: 25px;
+   
+} 
